--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
-streamlit==1.28.0
-pandas==2.0.3
-Pillow==10.0.1
-scikit-learn==1.3.0
-reportlab==4.0.4
-plotly==5.15.0
+streamlit>=1.28.0
+pandas>=2.0.0
+pillow>=10.0.0
+numpy
