--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-streamlit>=1.28.0
-pandas>=2.0.0
-pillow>=10.0.0
-numpy
+streamlit==1.28.0
+pandas==2.0.3
+scikit-learn==1.3.0
+numpy==1.24.3
+Pillow==10.0.1
+reportlab==4.0.4
+plotly==5.15.0
